src/objects/SKU__c.object
<CustomObject>
    <description>For SKUs that are related to the Purchase Order for EDI transactions.</description>
    <fields>
        <fullName>Dummy_SKU_used__c</fullName>
        <label>Dummy SKU used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Issue__c</fullName>
        <label>Other Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number_SKU__c</fullName>
        <formula>Purchase_Order__r.PO_Number__c</formula>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order Record</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SKU_Issue__c</fullName>
        <label>SKU Issue</label>
        <picklist>
            <picklistValues>
                <fullName>No Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing (YPOU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing (YMTP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>SKU</label>
    <nameField>
        <label>SKU Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Issue_Required_on_SKU_Issue</fullName>
        <active>true</active>
        <description>If SKU Issue is &quot;Other&quot;, this requires &quot;Other Issue&quot; to be populated.</description>
        <errorConditionFormula>AND (
 INCLUDES( SKU_Issue__c , &quot;Other&quot;),
 ISBLANK( Other_Issue__c )
)</errorConditionFormula>
        <errorDisplayField>Other_Issue__c</errorDisplayField>
        <errorMessage>This field is required.</errorMessage>
    </validationRules>
</CustomObject>